--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -37,6 +37,16 @@
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     <span ui-view="main"></span>
   </body>
 </html>
